--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ env:
     KUBE_NAMESPACE: "happyboard-prod"
     HELM_RELEASE_NAME: "happyboard"
     HELM_CHART_PATH: "./happyboard-deployment-helmchart"
+    CLUSTER_NAME: "happyboard-cluster"
 
 jobs:
   deploy:
@@ -25,12 +26,12 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: "ap-southeast-1"
 
       # Setup kubectl and authenticate to EKS
       - name: Setup kubectl
         run: |
-          aws eks update-kubeconfig --name happyboard-cluster --region ${{ secrets.AWS_REGION }}
+          aws eks update-kubeconfig --name $CLUSTER_NAME --region ${{ secrets.AWS_REGION }}
 
       # Deploy application
       - name: Deploy using helm
