--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       # Setup kubectl and authenticate to EKS
-      - name: Setup kubectl
-        run: |
-          aws eks update-kubeconfig --name $CLUSTER_NAME --region ${{ secrets.AWS_REGION }}
+      # - name: Setup kubectl
+      #   run: |
+      #     aws eks update-kubeconfig --name $CLUSTER_NAME --region ${{ secrets.AWS_REGION }}
 
       # Deploy application
       - name: Deploy using helm
