--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,12 @@ jobs:
         run: |
           cat ~/.kube/config
 
-               # Ensure namespace exists
+      # Configure AWS credentials    
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::730335467751:role/eksctl-my-free-eks-cluster-nodegro-NodeInstanceRole-SYrhCf23MiwJ
+          aws-region: us-west-2
 
       # Ensure namespace exists
       - name: Ensure namespace exists
