--- a/happyboard-deployment-helmchart/values.yaml
+++ b/happyboard-deployment-helmchart/values.yaml
@@ -73,8 +73,15 @@ services:
     secretName: happyboard-noti-secret
     prefix: /notification
 
-autoscalling: 
-enabled: true
+resources: 
+  requests:
+    memory: "64Mi"
+    cpu: "50m"
+  
+  limits: 
+    memory: "128Mi"
+    cpu: "100m"
+
 minReplicas: 1
 maxReplicas: 2
 averageUtilization: 60
