--- a/happyboard-deployment-helmchart/templates/deployment.yaml
+++ b/happyboard-deployment-helmchart/templates/deployment.yaml
@@ -20,6 +20,13 @@ spec:
         - name: {{ $serviceName }}
           image: {{ $service.image }}
           imagePullPolicy: Always
+          resources: 
+            requests: 
+              memory: {{ .Values.resources.requests.memory }}
+              cpu: {{ .Values.resources.requests.cpu }}
+            limits: 
+              memory: {{ .Values.resources.limits.memory }}
+              cpu: {{ .Values.resources.limits.cpu }}
           ports:
             - containerPort: {{ $service.containerPort }}
           command: 
